ffmpeg: disable resample

--- a/ext/ffmpeg/Makefile.am
+++ b/ext/ffmpeg/Makefile.am
@@ -15,8 +15,9 @@ libgstffmpeg_la_SOURCES = gstffmpeg.c	\
 			  gstffmpegcfg.c	\
 			  gstffmpegdemux.c	\
 			  gstffmpegmux.c    \
-			  gstffmpegdeinterlace.c	\
-			  gstffmpegaudioresample.c
+			  gstffmpegdeinterlace.c
+#\
+#			  gstffmpegaudioresample.c
 # 	\
 # 			  gstffmpegscale.c
 
