docs: add new curl plugin and curlsink element to docs

--- a/docs/plugins/Makefile.am
+++ b/docs/plugins/Makefile.am
@@ -94,6 +94,7 @@ EXTRA_HFILES = \
 	$(top_srcdir)/ext/amrwbenc/gstamrwbenc.h \
 	$(top_srcdir)/ext/celt/gstceltdec.h \
 	$(top_srcdir)/ext/celt/gstceltenc.h \
+	$(top_srcdir)/ext/curl/gstcurlsink.h \
 	$(top_srcdir)/ext/dc1394/gstdc1394.h \
 	$(top_srcdir)/ext/directfb/dfbvideosink.h \
 	$(top_srcdir)/ext/dts/gstdtsdec.h \
