--- a/tests/examples/Makefile.am
+++ b/tests/examples/Makefile.am
@@ -4,8 +4,12 @@ else
 JACK_DIR=
 endif
 
-if USE_CAIRO
+if USE_CAIRO_GOBJECT
+if HAVE_GTK_X11
 CAIRO_DIR=cairo
+else
+CAIRO_DIR=
+endif
 else
 CAIRO_DIR=
 endif
