--- a/sys/ximage/Makefile.am
+++ b/sys/ximage/Makefile.am
@@ -1,6 +1,6 @@
 plugin_LTLIBRARIES = libgstximagesink.la
 
-libgstximagesink_la_SOURCES =  ximagesink.c ximage.c
+libgstximagesink_la_SOURCES =  ximagesink.c ximage.c ximagepool.c
 libgstximagesink_la_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_BASE_CFLAGS) $(GST_CFLAGS) $(X_CFLAGS)
 libgstximagesink_la_LIBADD = \
 	$(top_builddir)/gst-libs/gst/interfaces/libgstinterfaces-$(GST_MAJORMINOR).la \
@@ -11,4 +11,4 @@ libgstximagesink_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgstximagesink_la_DEPENDENCIES = $(top_builddir)/gst-libs/gst/video/libgstvideo-$(GST_MAJORMINOR).la
 libgstximagesink_la_LIBTOOLFLAGS = --tag=disable-static
 
-noinst_HEADERS = ximagesink.h 
+noinst_HEADERS = ximagesink.h ximagepool.h
