examples: don't use hardcodec 0.10

--- a/tests/examples/cairo/Makefile.am
+++ b/tests/examples/cairo/Makefile.am
@@ -8,5 +8,5 @@ cairo_overlay_SOURCES = cairo_overlay.c
 cairo_overlay_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_CFLAGS) \
 	$(GTK_CFLAGS) $(CAIRO_CFLAGS)
 cairo_overlay_LDFLAGS = \
-	$(GST_LIBS) -lgstinterfaces-0.10 -lgstvideo-$(GST_MAJORMINOR) \
+	$(GST_LIBS) -lgstinterfaces-$(GST_MAJORMINOR) -lgstvideo-$(GST_MAJORMINOR) \
 	$(GTK_LIBS) $(CAIRO_LIBS)
