--- a/tests/examples/Makefile.am
+++ b/tests/examples/Makefile.am
@@ -14,6 +14,6 @@ SUBDIRS = audiofx equalizer $(JACK_DIR) level pulse \
 	rtp shapewipe spectrum v4l2 $(CAIRO_DIR)
 
 DIST_SUBDIRS = audiofx equalizer jack level pulse \
-	rtp shapewipe spectrum v4l2 $(CAIRO_DIR)
+	rtp shapewipe spectrum v4l2 cairo
 
 include $(top_srcdir)/common/parallel-subdirs.mak
