--- a/gst/vmnc/Makefile.am
+++ b/gst/vmnc/Makefile.am
@@ -1,7 +1,7 @@
 plugin_LTLIBRARIES = libgstvmnc.la
 
 libgstvmnc_la_SOURCES = vmncdec.c
-libgstvmnc_la_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_BASE_CFLAGS) $(GST_CFLAGS) $(THEORA_CFLAGS)
+libgstvmnc_la_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_BASE_CFLAGS) $(GST_CFLAGS)
 libgstvmnc_la_LIBADD = $(GST_BASE_LIBS) $(GST_LIBS)
 libgstvmnc_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgstvmnc_la_LIBTOOLFLAGS = --tag=disable-static
