shm: Check for MSG_NOSIGNAL macro
Don't build the plugin is MSG_NOSIGNAL is not defined

https://bugzilla.gnome.org/show_bug.cgi?id=645053

--- a/configure.ac
+++ b/configure.ac
@@ -537,7 +537,8 @@ AG_GST_CHECK_FEATURE(QUICKTIME, [QuickTime wrapper], qtwrapper, [
 dnl check for shm_open (for shm plugin)
 translit(dnm, m, l) AM_CONDITIONAL(USE_SHM, true)
 AG_GST_CHECK_FEATURE(SHM, [POSIX shared memory source and sink], shm, [
-  AC_CHECK_LIB(rt, shm_open, HAVE_SHM=yes, HAVE_SHM=no)
+  AC_CHECK_LIB(rt, shm_open,
+   AC_CHECK_DECL(MSG_NOSIGNAL, HAVE_SHM=yes, HAVE_SHM=no), HAVE_SHM=no)
 ])
 
 dnl check for Video CD
