--- a/configure.ac
+++ b/configure.ac
@@ -767,7 +767,8 @@ AG_GST_CHECK_FEATURE(JACK, Jack, jack, [
   AC_SUBST(JACK_CFLAGS)
   AC_SUBST(JACK_LIBS)
 
-  AG_GST_PKG_CHECK_MODULES(JACK_0_120_2, jack >= 0.120.2)
+  dnl upcomming jack2 (1.9.7 will have the new api as well
+  AG_GST_PKG_CHECK_MODULES(JACK_0_120_2, jack >= 0.120.2 jack < 1.0)
   if test x$HAVE_JACK_0_120_2 = xyes; then
     AC_DEFINE(HAVE_JACK_0_120_2, 1, [defined if jack >= 0.120.2 is available])
   fi
