tracer: initial prototype for the tracing subsystem

--- a/configure.ac
+++ b/configure.ac
@@ -990,6 +990,7 @@ libs/gst/helpers/Makefile
 libs/gst/net/Makefile
 plugins/Makefile
 plugins/elements/Makefile
+plugins/tracers/Makefile
 po/Makefile.in
 tests/Makefile
 tests/benchmarks/Makefile
