--- a/gst/Makefile.am
+++ b/gst/Makefile.am
@@ -115,6 +115,8 @@ libgstreamer_@GST_API_VERSION@_la_SOURCES = \
 	gsttoc.c		\
 	gsttocsetter.c		\
 	$(GST_TRACE_SRC)	\
+	gsttracer.c		\
+	gsttracerfactory.c	\
 	gsttypefind.c		\
 	gsttypefindfactory.c	\
 	gsturi.c		\
@@ -218,6 +220,8 @@ gst_headers =			\
 	gsttaskpool.h		\
 	gsttoc.h		\
 	gsttocsetter.h		\
+	gsttracer.h		\
+	gsttracerfactory.h	\
 	gsttypefind.h		\
 	gsttypefindfactory.h	\
 	gsturi.h		\
