--- a/gst/Makefile.am
+++ b/gst/Makefile.am
@@ -117,6 +117,7 @@ libgstreamer_@GST_API_VERSION@_la_SOURCES = \
 	$(GST_TRACE_SRC)	\
 	gsttracer.c		\
 	gsttracerfactory.c	\
+	gsttracerutils.c		\
 	gsttypefind.c		\
 	gsttypefindfactory.c	\
 	gsturi.c		\
@@ -222,6 +223,7 @@ gst_headers =			\
 	gsttocsetter.h		\
 	gsttracer.h		\
 	gsttracerfactory.h	\
+	gsttracerutils.h		\
 	gsttypefind.h		\
 	gsttypefindfactory.h	\
 	gsturi.h		\
