build: remove support for bluez4

--- a/configure.ac
+++ b/configure.ac
@@ -1615,15 +1615,11 @@ esac
 dnl *** bluez ***
 translit(dnm, m, l) AM_CONDITIONAL(USE_BLUEZ, true)
 AG_GST_CHECK_FEATURE(BLUEZ, [Bluez], bluez, [
-  PKG_CHECK_MODULES([BLUEZ4], [bluez < 5.0], [
-    HAVE_BLUEZ=yes
-    AC_DEFINE(HAVE_BLUEZ4,[1],[Old bluez detected])
-  ], [
     PKG_CHECK_MODULES([BLUEZ5], [bluez >= 5.0], [
       PKG_CHECK_MODULES([GIO_UNIX], gio-unix-2.0 > 2.24, [
         AC_CHECK_PROG([GDBUS_CODEGEN],[gdbus-codegen],[gdbus-codegen])
         HAVE_BLUEZ=yes
-        AC_DEFINE(HAVE_BLUEZ5,[1],[Current bluez detected])
+        AC_DEFINE(HAVE_BLUEZ5,[1],[Bluez5 detected])
       ], [
         HAVE_BLUEZ=no
       ])
