--- a/configure.ac
+++ b/configure.ac
@@ -460,7 +460,8 @@ ges/Makefile
 tests/Makefile
 tests/check/Makefile
 tests/benchmarks/Makefile
-tests/examples/Makefile
+examples/Makefile
+examples/c/Makefile
 tests/validate/Makefile
 tests/validate/scenarios/Makefile
 tools/Makefile
@@ -476,6 +477,5 @@ bindings/Makefile
 bindings/python/Makefile
 bindings/python/gi/Makefile
 bindings/python/gi/overrides/Makefile
-bindings/python/examples/Makefile
 )
 AC_OUTPUT
