--- a/examples/c/Makefile.am
+++ b/examples/c/Makefile.am
@@ -17,8 +17,10 @@ noinst_PROGRAMS = 	\
 	text_properties	\
 	assets \
 	multifilesrc \
+	play_timeline_with_one_clip \
 	$(graphical)
 
 AM_CFLAGS =  -I$(top_srcdir) $(GST_PBUTILS_CFLAGS) $(GST_CFLAGS) $(GTK_CFLAGS)
 AM_LDFLAGS = -export-dynamic
 LDADD = $(top_builddir)/ges/libges-@GST_API_VERSION@.la $(GST_PBUTILS_LIBS) $(GST_LIBS) $(GTK_LIBS)
+
