--- a/configure.ac
+++ b/configure.ac
@@ -307,9 +307,9 @@ else
   # Enable pic and static so that we get .a files, but with PIC code.
   emblibav_configure_args="$emblibav_configure_args --disable-avserver --disable-avplay\
         --disable-avconv --disable-avprobe --enable-static --enable-pic \
-	--disable-encoder=flac --disable-decoder=cavs --disable-protocols --disable-devices\
-	--disable-network --disable-hwaccels --disable-dxva2 --disable-vdpau\
-	--disable-filters --disable-doc --enable-optimizations"
+        --disable-encoder=flac --disable-protocols --disable-devices\
+        --disable-network --disable-hwaccels --disable-dxva2 --disable-vdpau\
+        --disable-filters --disable-doc --enable-optimizations"
 
   if test "x$enable_lgpl" != "xyes"; then
     emblibav_configure_args="$emblibav_configure_args --enable-gpl"
