tests: remove some pointless ancient code examples

--- a/tests/examples/Makefile.am
+++ b/tests/examples/Makefile.am
@@ -1,9 +1,3 @@
-if GST_DISABLE_PARSE
-GST_PARSE_DIRS = 
-else
-GST_PARSE_DIRS = launch
-endif
-
 # adapter test needs sys/times.h and unistd.h
 if HAVE_SYS_TIMES_H_AND_UNISTD_H
   ADAPTER_TEST_DIR = adapter
@@ -16,35 +10,15 @@ always_dirs = \
 	helloworld \
 	manual     \
 	memory   \
-	metadata   \
 	netclock \
-	queue      \
 	stepping \
 	streamiddemux \
-	streams \
-	typefind
-
-#appreader
-#cutter
-#events
-#helloworld2
-#launch
-#manual
-#mixer
-#pingpong
-#plugins
-#pwg
-#queue2
-#queue3
-#queue4
-#retag
-#thread
+	streams
 
 SUBDIRS = 				\
 	$(always_dirs)			\
-	$(ADAPTER_TEST_DIR)		\
-	$(GST_PARSE_DIRS)
+	$(ADAPTER_TEST_DIR)
 
-DIST_SUBDIRS = $(always_dirs) adapter launch
+DIST_SUBDIRS = $(always_dirs) adapter
 
 include $(top_srcdir)/common/parallel-subdirs.mak
