tests: add simple-encoder program
This patch adds a simple-encoder test program that uses libgstvaapi for video
encoding to elementary (raw) streams. Input stream is raw YUV in the Y4M
format. That can be from a regular file or standard input when the input
filename is "-".

Usage: simple-encoder [options]* <source>

Options:
--output|-o     output file name
--codec|-c      codec to use for video encoding
--bitrate|-b    desired bitrate (kbps)

By default, and as an initial patch, the encoded stream shall conform to the
minimally supported profile. That is "Constrained Baseline Profile" for H.264
and "Simple Profile" for MPEG-2. Though, those are the defaults to be
generated by libgstvaapi.

You can find Y4M sample files here http://samples.mplayerhq.hu/yuv4mpeg2/

Original-patch-by: Changzhi Wei <changzhix.wei@intel.com>
* general code clean-up
* removed the yuv reader thread
* re-wrote the y4m file parser
* updated used API fixed some wrong usage
* fixed a lot of memory leaks
* added the bitrate setting
* keep fps' numerator and denominator
* simplified the thread control
* removed custom logging and use glib

Signed-off-by: Víctor Manuel Jáquez Leal <victorx.jaquez@intel.com>

https://bugzilla.gnome.org/show_bug.cgi?id=719528

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -6,6 +6,7 @@ noinst_PROGRAMS = \
 	test-surfaces			\
 	test-windows			\
 	test-subpicture			\
+	simple-encoder			\
 	$(NULL)
 
 if USE_GLX
@@ -121,6 +122,12 @@ simple_decoder_source_h	=
 simple_decoder_SOURCES	= $(simple_decoder_source_c)
 simple_decoder_CFLAGS	= $(TEST_CFLAGS) $(GST_VIDEO_CFLAGS)
 simple_decoder_LDADD	= libutils.la $(TEST_LIBS) $(GST_VIDEO_LIBS)
+
+simple_encoder_source_c = simple-encoder.c y4mreader.c
+simple_encoder_source_h = y4mreader.h
+simple_encoder_SOURCES  = $(simple_encoder_source_c)
+simple_encoder_CFLAGS   = $(TEST_CFLAGS) $(GST_VIDEO_CFLAGS)
+simple_encoder_LDADD    = libutils.la $(TEST_LIBS) $(GST_VIDEO_LIBS)
 
 EXTRA_DIST = \
 	test-subpicture-data.h		\
